2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Reference the newly added event-flow.png

	* clutter/clutter-alpha.c: Ditto, with alpha-func.png

	* clutter/clutter-texture.c: Fix the XML.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Reference the newly
	added image showing the effects of different alpha functions
	on the same path behaviour.

	* configure.ac: Find out the prefix of some of the libraries
	we depend upon, so that gtk-doc can fix the references for us.

2008-02-08  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c:
        Tidy up offscreen code, adding into realize/unrealize.
        Add more safety code.
        Improve documentation.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c:
	(resolve_alpha_func): Use a whitelist containing the alpha function
	provided by Clutter, as a fallback in case g_module_open() does not
	work.

	(clutter_script_parse_alpha): Add an explicit warning in case we
	cannot find the alpha function used inside a UI definition.

2008-02-07  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-group.c (clutter_group_query_coords):
	Take into account the anchor point when calculating the box size.

2008-02-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Add a note on clutter_actor_set_size()
	reguarding groups.

	* clutter/clutter-group.c: Clarify group sizing.

2008-02-07  Øyvind Kolås  <pippin@o-hand.com>

	* tests/test-shader.c: (button_release_cb): added simplified
	implementation of a box-blur shader from Gwenole Beauchesne that
	should work on GLSL implementing low-end IGPs not implementing
	dynamic branching. The original code used crashed some of these
	due to bugs in drivers or similar. Resolves bug #710.

2008-02-07  Tomas Frydrych  <tf@openedhand.com>

	* tests/test-actors.c:
	Reverted previous change.

2008-02-07  Tomas Frydrych  <tf@openedhand.com>
